<resources>
    <string name="app_name">快传</string>
    <string name="root_memory_storage">手机存储</string>
    <string name="root_sdcard_storage">内部存储</string>
    <string name="root_sdcard_storage_exten">SD存储卡</string>
    <string name="person_number">%1$s人</string>
    <string name="count_number">%1$s次</string>
    <string name="file_total_b">%1$sB</string>
    <string name="file_total_kb">%1$sKB</string>
    <string name="file_total_mb">%1$sMB</string>
    <string name="title_activity_user_center">个人中心</string>
    <string name="title_activity_help">快速指南</string>
    <string name="title_activity_feed_back">意见反馈</string>
    <string name="title_activity_version">版本和反馈</string>
    <string name="title_activity_contact_us">联系我们</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_share_app">给身边的人装快传</string>
    <string name="title_activity_show_image">查看图片</string>
    <string name="title_activity_share_pc">分享电脑</string>
    <string name="bluetooth_invite">蓝牙邀请</string>
    <string name="zero_traffic_invite">零流量邀请</string>
    <string name="invite_description">扫描二维码可以直接联系我吧</string>
    <string name="title_activity_find_bluethooth">蓝牙设备选择器</string>
    <string name="search_mobile">扫描查找设备</string>
    <string name="useable_mobile">可用设备</string>
    <string name="wx_qr_code">微信二维码</string>
    <string name="contact_qq">QQ:26666302</string>
    <string name="app_version">版本: %1$s</string>
    <string name="company">DiamondProx出品</string>
    <string name="copyright">Copyright © 2016 DiamondProx.</string>
    <string name="allright">All Rights Reserved</string>
    <string name="is_new">已经是最新版本</string>
    <string name="check_version">检查新版本</string>
    <string name="thanks_feedback">意见已经提交,谢谢你的支持</string>
    <string name="feedback_tip">请输入反馈意见</string>
    <string name="more">更多</string>
    <string name="cross_platform_transfer">跨平台传输</string>
    <string name="invite">邀请</string>
    <string name="connect_pc">连接电脑</string>
    <string name="connect_firend">连朋友 传文件</string>
    <string name="mobile_all">手机全部</string>
    <string name="picture">照片</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="application">应用</string>
    <string name="history_message">历史消息</string>
    <string name="inbox">收件箱</string>
    <string name="other">其他</string>
    <string name="folder">文件夹</string>
    <string name="install">安装包</string>
    <string name="disk_status">可用:%1$s/%2$s</string>
    <string name="clear">清除</string>
    <string name="from">接收自 %1$s</string>
    <string name="transfer">传输</string>
    <string name="multi_select">多选</string>
    <string name="play">播放</string>
    <string name="send_to">发送给 %1$s</string>
    <string name="receive_from">接收自 %1$s</string>
    <string name="percent">%1$s%%</string>
    <string name="create_file_success">创建成功</string>
    <string name="create_file_failed">创建失败</string>
    <string name="check_task_success">校验成功</string>
    <string name="check_task_failed">校验失败</string>
    <string name="set_file_complete">发送完成</string>
    <string name="set_file_failed">发送失败</string>
    <string name="set_file_stop">暂停</string>
    <string name="set_file_transmit">传输中</string>
    <string name="set_file_waiting">排队中</string>
    <string name="retry">重试</string>
    <string name="view">查看</string>
    <string name="resume">继续</string>
    <string name="stop">暂停</string>
    <string name="mobile">手机</string>
    <string name="message">消息</string>
    <string name="cancel">取消</string>
    <string name="property">属性</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>
    <string name="uninstall">卸载</string>
    <string name="rename">重命名</string>
    <string name="backup">备份</string>
    <string name="btn_sure">确定</string>
    <string name="property_name">名称:%1$s</string>
    <string name="property_type">类型:%1$s</string>
    <string name="property_path">位置:%1$s</string>
    <string name="property_size">大小:%1$s</string>
    <string name="property_edit_time">修改日期:%1$s</string>
    <string name="mime_audio">音频</string>
    <string name="mime_video">视频</string>
    <string name="mime_image">图片</string>
    <string name="mime_app">应用</string>
    <string name="mime_normal">文件</string>
    <string name="mime_apk">安装包</string>
    <string name="backup_success">备份成功</string>
    <string name="please_input_new_name">请输入新文件名</string>
    <string name="sure_delete_file">你确定要删除吗?</string>
    <string name="up_dir">上一级</string>
    <string name="local_music">本地音乐(%1$s)</string>
    <string name="local_video">本地视频(%1$s)</string>
    <string name="local_app">本地程序(%1$s)</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="msg_net_off">未连接上网络</string>
    <string name="invite_nearby_friend">邀请附近的朋友</string>
    <string name="step1">第1步</string>
    <string name="step2">第2步</string>
    <string name="step1_hint">请好友打开手机WIFI,连接到无线网络</string>
    <string name="step2_hint">打开浏览器输入网址,或扫描二维码</string>
    <string name="default_wifi">DM-JoinMe</string>
    <string name="default_ap_ip">http://192.168.43.1:7766</string>
    <string name="connecting">全速连接中,请稍后…</string>
    <string name="connect_success">连接成功后,任意文件零流量传输~</string>
    <string name="creating_connect">正在创建连接,请稍后…</string>
    <string name="create_connect">创建成功,等待朋友搜索加入</string>
    <string name="let_friend_join">让朋友搜索加入"%1$s"</string>
    <string name="email_feed_back">邮件反馈</string>
    <string name="normal_setting">常规设置</string>
    <string name="sound">声音</string>
    <string name="sound_setting_desc">进行操作时播放声音</string>
    <string name="vibration">震动</string>
    <string name="vibration_setting_desc">进行操作时震动</string>
    <string name="update_setting">新消息提醒</string>
    <string name="clear_cache">清理缓存</string>
    <string name="net_work">网络</string>
    <string name="share_mobile_data">分享3G网络</string>
    <string name="privacy">隐私</string>
    <string name="show_hidden_file">显示隐藏文件</string>
    <string name="need_pwd">使用密码连接</string>
    <string name="advanced">高级</string>
    <string name="auto_install">自动安装应用</string>
    <string name="aotu_install_setting_desc">接收或者下载完后自动安装应用(root权限)</string>
    <string name="clear_success">清理缓存成功</string>
    <string name="progress_title">提示</string>
    <string name="upgrade_root_permission">正在获取Root权限</string>
    <string name="upgrade_root_permission_success">成功获取Root权限</string>
    <string name="upgrade_root_permission_failure">获取Root权限失败</string>
    <string name="feed_back_title">快传意见反馈</string>
    <string name="feed_back_hint">非常感谢您使用改产品,请输入您珍贵的意见,助于提升产品提升,非常感谢!</string>
    <string name="clear_all_history_comfirm">是否清除所有历史消息</string>
    <string name="confirm">确认</string>
    <string name="total_transfer_desc">目前为止传输文件大小</string>
    <string name="exit_confirm">再按一次退出程序</string>
    <string name="join_friend">连朋友，传文件</string>
    <string name="ours_join">“我们加入”</string>
    <string name="create_my_connect">“我建连接”</string>
    <string name="create_hotspot">创建连接</string>
    <string name="search_join">搜索加入</string>
    <string name="search_available_friend">正在搜索可链接的朋友</string>
    <string name="cancel_search">取消搜索</string>
    <string name="available_link_friend">可链接的朋友</string>
    <string name="not_found_friend">没有找到可链接的人?</string>
    <string name="please_again_search1">1.点击刷新按钮,重新搜索</string>
    <string name="please_again_search2">2.或点击返回,建个链接让朋友来找你</string>
    <string name="back">返回</string>
    <string name="create_hotspot_failed">创建连接失败</string>
    <string name="click_link">点击链接</string>
    <string name="bit">bit</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="gb">GB</string>
    <string name="zero">00</string>
    <string name="backup_apk">正在备份程序</string>
    <string name="open_install_failed">启动程序失败</string>
    <string name="repeat_name">存在同名文件</string>
    <string name="rename_failed">文件重命名失败</string>
    <string name="confirm_exit_link">退出当前连接?</string>
    <string name="file_send_failed">文件%1$s发送失败</string>
    <string name="history_empty">暂无传输记录</string>
    <string name="disk_enough">磁盘空间不足</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="send_not_empty">发个空文件就没必要了吧~</string>


</resources>
