<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_40"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/app_name"
        android:textColor="@color/gray_font"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        android:id="@+id/check_version"
        android:layout_width="@dimen/dp_220"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/gray_flat_button">

        <TextView
            android:id="@+id/txt_check_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/check_version"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/is_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_toRightOf="@id/txt_check_version"
            android:background="@mipmap/badge_new" />

    </RelativeLayout>


    <Button
        android:id="@+id/feed_back"
        android:layout_width="@dimen/dp_220"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/gray_flat_button"
        android:text="@string/title_activity_feed_back"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/contact_us"
        android:layout_width="@dimen/dp_220"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/gray_flat_button"
        android:text="@string/title_activity_contact_us"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/app_version"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/company"
        android:textColor="@color/gray_font"
        android:textSize="@dimen/sp_11" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/copyright"
        android:textColor="@color/gray_font"
        android:textSize="@dimen/sp_11" />

    <TextView
        android:id="@+id/allright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/allright"
        android:textColor="@color/gray_font"
        android:textSize="@dimen/sp_11" />


</LinearLayout>
