<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_2"
            android:layout_marginRight="@dimen/dp_2"
            android:layout_marginTop="@dimen/dp_2"
            android:gravity="center"
            android:text="@string/property"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_property_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/property_name"
                android:textColor="@color/deep_gray"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/txt_property_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/property_type"
                android:textColor="@color/deep_gray"
                android:textSize="@dimen/sp_15" />

            <com.huangjiang.view.AutoSplitTextView
                android:id="@+id/txt_property_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/property_path"
                android:textColor="@color/deep_gray"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/txt_property_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/property_size"
                android:textColor="@color/deep_gray"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/txt_property_edit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/property_edit_time"
                android:textColor="@color/deep_gray"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.15"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/division_line" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginBottom="@dimen/dp_2"
            android:layout_marginLeft="@dimen/dp_2"
            android:layout_marginRight="@dimen/dp_2"
            android:background="@drawable/menu_selector"
            android:text="@string/btn_sure"
            android:textColor="@color/deep_gray"
            android:textSize="@dimen/sp_17" />


    </LinearLayout>
</FrameLayout>