<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/video_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_selector"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/data_folder_inbox_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/video"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/picture_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_selector"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/data_folder_inbox_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/picture"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/music_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_selector"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/data_folder_inbox_music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/music"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_selector"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/data_folder_inbox_other" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/other"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/folder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_selector"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/data_folder_inbox_folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/folder"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/install_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_selector"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_install"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@mipmap/data_folder_inbox_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/install"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>